Updated desktop redirect code to ignore redirect if url parameter noredirect=1 is present

--- a/public/jstest.html
+++ b/public/jstest.html
@@ -8,6 +8,11 @@
 <script type="text/javascript" src="/javascripts/util.js"></script>
 <script type="text/javascript" src="/javascripts/support/underscore.js"></script>
 
+
+<!-- Place these tags in the head tag of your website -->
+<script type="text/javascript">var _RSITE = 'http://yomobi.com/crest';</script>
+<script type="text/javascript" src="http://local.host:3000/javascripts/mobile-redirect.js"></script>
+
 <script>
 $(document).ready(function(){
    
