All yomobi urls should be prepended with www

--- a/public/jstest.html
+++ b/public/jstest.html
@@ -10,7 +10,7 @@
 
 
 <!-- Place these tags in the head tag of your website -->
-<script type="text/javascript">var _RSITE = 'http://yomobi.com/crest';</script>
+<script type="text/javascript">var _RSITE = 'http://www.yomobi.com/crest';</script>
 <script type="text/javascript" src="http://local.host:3000/javascripts/mobile-redirect.js"></script>
 
 <script>
